@@ -1,5 +1,11 @@
 2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>
 
+	* library/menu.tcl : Do not flip to the arrow cursor on menus.
+	This was a Motif convention.  Current behavior is maintained if
+	tk_strictMotif is enabled.  [Bug 1023955]
+
+2008-08-25  Todd M. Helfter <tmh@users.sourceforge.net>
+
 	The patch is associated with the bug tracker id: 1936220
 	library/tkfbox.tcl : fix the multiple selection error for
 	tk_getOpenFile -multiple 1 which fails on all unix platforms since
